# CusCareAI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/chatbot/: chatbot.py  crud.py  helper.py  labels.py
app/core/: config.py  logging.py
app/core/langgraph/: graph.py
app/core/omnidesk/: omnidesk_api.py
app/models/: db_helper.py  models.py  qdrant_helper.py  redis_helper.py
app/schemas/: chat.py
migrations/: env.py
migrations/versions/: 0824450e8b72_add_labels_and_group_for_chat.py  6cfdf63981a8_message_id_bigint_to_int.py  6e1345c973c1_chat_id_bigint_to_string.py
